tests/baselines/reference/privateFieldAssignabilityFromUnknown(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
privateFieldAssignabilityFromUnknown.ts(2,3): error TS18028: Private identifiers are only available when targeting ECMAScript 2015 and higher.
privateFieldAssignabilityFromUnknown.ts(5,7): error TS2322: Type 'unknown' is not assignable to type 'Class'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== privateFieldAssignabilityFromUnknown.ts (2 errors) ====
    export class Class {
      #field: any
      ~~~~~~
!!! error TS18028: Private identifiers are only available when targeting ECMAScript 2015 and higher.
    }
    
    const task: Class = {} as unknown;
          ~~~~
!!! error TS2322: Type 'unknown' is not assignable to type 'Class'.
    